<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_theme"
    tools:context=".Landing">

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1000dp"
        android:layout_marginTop="140dp"
        android:text="@string/app_name_first_half"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/title2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="1000dp"
        android:text="@string/app_name_second_half"
        android:textAllCaps="true"
        android:textColor="@color/amber_theme"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/landing_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/email_input"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_300"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <EditText
        android:id="@+id/landing_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="password"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_300"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_edit_email" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_custom_2"
        android:text="@string/login_btn_text"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signup_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="75dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/signup_link_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>