<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_theme"
    tools:context=".CreateClass">

    <TextView
        android:id="@+id/createClassInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="94dp"
        android:text="@string/create_class_instructions_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextClassName"
        android:layout_width="323dp"
        android:layout_height="57dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="101dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/input_class_name_text"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_300"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createClassInstructions" />

    <Button
        android:id="@+id/submitNewClassBtn"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/btn_custom"
        android:text="@string/submit_new_class_btn_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="323dp"
        android:layout_height="57dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="101dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/input_class_password_text"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_300"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextClassName" />
</androidx.constraintlayout.widget.ConstraintLayout>