<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_theme"
    tools:context=".CreateOrJoinClass">

    <TextView
        android:id="@+id/joinCodeInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="130dp"
        android:text="@string/join_code_instructions_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextJoinCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/join_code_dashed_line"
        android:cursorVisible="false"
        android:fontFamily="monospace"
        android:hint="@string/join_code_hint"
        android:inputType="text"
        android:letterSpacing="0.33"
        android:paddingHorizontal="-10dp"
        android:paddingVertical="10dp"
        android:textColor="@color/rose_theme"
        android:textColorHint="@color/rose_300"
        android:textSize="60sp"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinCodeInstructions" />

    <Button
        android:id="@+id/createClassBtn"
        android:layout_width="261dp"
        android:layout_height="51dp"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/blue_border_btn"
        android:text="@string/create_class_btn_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/AskIfClassOrganizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ask_if_CO_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/createClassBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>