<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_theme"
    tools:context=".BelbinResults">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/amber_theme"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:text="@string/result_placeholder"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="20dp" />
    </ScrollView>

    <Button
        android:id="@+id/finish"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_custom"
        android:text="@string/result_finish"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>